--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <div class="col-6 col-md-6 col-lg-3">
                 <div class="box">
                   <div class="img">
-                    <img src="/images/sp tr.png tr.png" alt="">
+                    <img src="/images/sp tr.png" alt="">
                   </div>
                   <div class="detail">
                     <h5>
